--- a/Final_project/app/src/main/AndroidManifest.xml
+++ b/Final_project/app/src/main/AndroidManifest.xml
@@ -19,9 +19,15 @@
 
         <activity
             android:name=".SingleRestaurant"
-            android:label="Restaurant"
-            android:parentActivityName=".MainActivity"
-            >
+            android:label="Restaurant">
+<!--            android:parentActivityName=".MainActivity"-->
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+
+
         </activity>
     </application>
 
