--- a/Final_project/app/src/main/AndroidManifest.xml
+++ b/Final_project/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".SingleInspection">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,11 +29,11 @@
             android:label="@string/title_activity_restaurant"
             android:theme="@style/AppTheme.NoActionBar">
 <!--            android:parentActivityName=".MainActivity"-->
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+<!--        <intent-filter>-->
+<!--            <action android:name="android.intent.action.MAIN" />-->
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+<!--            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--        </intent-filter>-->
 
 
         </activity>
