--- a/Final_project/app/src/main/AndroidManifest.xml
+++ b/Final_project/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
 
 
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:label="ALL RESTAURANT"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
