Fixed main activity

--- a/Final_project/app/src/main/AndroidManifest.xml
+++ b/Final_project/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
 
 
         <activity android:name=".MainActivity"
-            android:label="@string/ProjectTitle"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/ProjectTitle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
