--- a/Final_project/app/src/main/AndroidManifest.xml
+++ b/Final_project/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
 
 
-        <activity android:name=".MainActivity"
+        <activity android:name=".UI.MainActivity"
             android:label="@string/ProjectTitle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SingleInspection"
+        <activity android:name=".UI.SingleInspection"
             android:label="@string/inspectionTitleName"
             android:launchMode="singleTop">
 
@@ -28,7 +28,7 @@
         </activity>
 
         <activity
-            android:name=".SingleRestaurant"
+            android:name=".UI.SingleRestaurant"
             android:label="@string/title_activity_restaurant"
             android:launchMode="singleTop">
 <!--            android:theme="@style/AppTheme.NoActionBar"-->
