--- a/Final_project/app/src/main/AndroidManifest.xml
+++ b/Final_project/app/src/main/AndroidManifest.xml
@@ -60,6 +60,8 @@
             android:label="@string/title_activity_restaurant"
             android:launchMode="singleTop">
 
+<!--            android:parentActivityName=".UI.MainActivity"-->
+
 
         </activity>
 
