--- a/Final_project/app/build.gradle
+++ b/Final_project/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.google.maps.android:android-maps-utils:2.0.3'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
