--- a/Final_project/app/build.gradle
+++ b/Final_project/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.google.maps.android:android-maps-utils:2.0.3'
 }
